ETCM-2825 update: combine the two FAQ docs under relocated support folder

--- a/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
@@ -1,7 +1,16 @@
 ---
-title: Example EVM sidechain FAQ
-metaTitle:  Example EVM sidechain FAQ
+title: Sidechains FAQ
+metaTitle:  Sidechains FAQ
 ---
+## Is the Sidechain Toolkit an open-source project?
+Yes, it will be open-sourced under the Input Output Global Github repository.
+
+## Will there be an alternative chain follower to DB sync that consumes less resources?
+Probably. IOG is currently considering other possibilities such as  [Oura](https://github.com/txpipe/oura) and [Carp](https://github.com/dcSpark/carp).
+
+### Why is the transfer token time between main chain to sidechain in a mainnet scenario 12 hours? 
+Bridge squad will have answers 
+### Questions for Plutus Bridge scripts
 
 ### What is the difference between the EVM Sidechain design and Milkomeda?
 
