ETCM-2825 Fix typos

--- a/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
@@ -2,14 +2,14 @@
 title: Sidechains FAQ
 metaTitle:  Sidechains FAQ
 ---
-# Sidechains FAQ
+
 This page answers some frequent questions for the Cardano Sidechains Toolkit and the example EVM sidechain application.
 ## The Cardano Sidechains Tookit
 ### Is the Sidechain Toolkit an open-source project?
 Yes, it will be open-sourced under the Input Output Global Github repository.
 
 ### Will there be an alternative chain follower to DB sync that consumes less resources?
-Yes, IOG is working in a less resource-intensive tool. There are other chain indexer tools such as [Oura](https://github.com/txpipe/oura) and [Carp](https://github.com/dcSpark/carp)[Carp](https://github.com/dcSpark/carp) that could serve the purpose of building a Cardano sidechain.
+Yes, IOG is working in a less resource-intensive tool. There are other chain indexer tools such as [Oura](https://github.com/txpipe/oura) and [Carp](https://github.com/dcSpark/carp) that could serve the purpose of building a Cardano sidechain.
 
 ### Why is the transfer token time between main chain and sidechain in a mainnet scenario 12 hours? 
 Bridge squad will have answers 
