--- a/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
@@ -5,6 +5,7 @@ metaTitle:  Sidechains FAQ
 
 This page answers some frequent questions for the Cardano Sidechains Toolkit and the example EVM sidechain application.
 ## The Cardano Sidechains Tookit
+These questions relate to the components IOG provides for building custom sidechains on Cardano.
 ### Is the Sidechain Toolkit an open-source project?
 Yes, it will be open-sourced under the Input Output Global Github repository.
 
@@ -13,9 +14,9 @@ Yes, IOG is working in a less resource-intensive tool. There are other chain ind
 
 ### Why is the transfer token time between main chain and sidechain in a mainnet scenario 12 hours? 
 Bridge squad will have answers 
-### Questions for Plutus Bridge scripts
 
 ## The example EVM sidechain application
+These questions relate to the application that IOG built as a proof of concept, using the Cardano Sidechains Toolkit.
 ### What is the difference between the EVM sidechain design and Milkomeda?
 
 Enhanced security. Milkomeda wants to go mainnet with 32 validators. The EVM sidechain wants to go with 101.
