--- a/content/08-cardano-sidechains/04-support/00-getting-support.mdx
+++ b/content/08-cardano-sidechains/04-support/00-getting-support.mdx
@@ -2,7 +2,11 @@
 title: Getting support
 metaTitle:  Getting support
 ---
-Your feedback is important because it helps us improve Cardano.   
+Your feedback is important because it helps us improve Cardano.
+
+## Discord
+
+If you have any questions or want to collaborate with fellow sidechain builders, then join `#ask-sidechains` in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput) server.
 
 ## Cardano Forum  
 
