--- a/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
@@ -4,16 +4,13 @@ metaTitle:  Sidechains FAQ
 ---
 
 This page answers some frequent questions for the Cardano Sidechains Toolkit and the example EVM sidechain application.
-## The Cardano Sidechains Tookit
+## The Cardano Sidechains Toolkit
 These questions relate to the components IOG provides for building custom sidechains on Cardano.
 ### Is the Sidechain Toolkit an open-source project?
 Yes, it will be open-sourced under the Input Output Global Github repository.
 
 ### Will there be an alternative chain follower to DB sync that consumes less resources?
 Yes, IOG is working in a less resource-intensive tool. There are other chain indexer tools such as [Oura](https://github.com/txpipe/oura) and [Carp](https://github.com/dcSpark/carp) that could serve the purpose of building a Cardano sidechain.
-
-### Why is the transfer token time between main chain and sidechain in a mainnet scenario 12 hours? 
-Bridge squad will have answers 
 
 ## The example EVM sidechain application
 These questions relate to the application that IOG built as a proof of concept, using the Cardano Sidechains Toolkit.
@@ -26,7 +23,7 @@ The EVM sidechain will be a decentralized permissionless sidechain that allows e
 
 ### What is the difference between the EVM sidechain and Hydra?
 
-They are two separate solutions. [Hydra](https://iohk.io/en/blog/posts/2022/02/03/implementing-hydra-heads-the-first-step-towards-the-full-hydra-vision/) is a layer 2 scalability solution for applications developed in Plutus for Cardano blockchain to speed up transactionss, similar to the Lightning network for Bitcoin.
+They are two separate solutions. [Hydra](https://iohk.io/en/blog/posts/2022/02/03/implementing-hydra-heads-the-first-step-towards-the-full-hydra-vision/) is a layer 2 scalability solution for applications developed in Plutus for the Cardano blockchain to speed up transactions, similar to the Lightning network for Bitcoin.
 
 The EVM sidechain brings Ethereum virtual machine (Solidity-based DApps) execution into Cardano via a sidechain.
 
