--- a/content/08-cardano-sidechains/02-sidechain-toolkit/00-introduction.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/00-introduction.mdx
@@ -21,8 +21,8 @@ The chain follower is capable of observing the state of main-chain events that g
 This component is a part of the sidechain node validator. It has the responsibility to filter and transform data coming from the Chain follower and present them to the components that will process them accordingly to the governing rules of the sidechain 
 Technical Specification
 
-# Technical Specification
+## Technical specification
 
-The Cardano sidechain client specification is a detailed document describing the architecture, use cases, and implementation of the sidechain components. The example EVM implementation is the design & engineering result that showcases a possible implementation of said specification
+The Cardano sidechain client specification is a detailed document describing the architecture, use cases, and implementation of the sidechain components. The example EVM implementation is the design and engineering result that showcases a possible implementation of said specification.
 
-[View Technical Specification](https://cardano.org)
+[Read technical specification](https://cardano.org)
