--- a/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/04-support/01-sidechain-faq.mdx
@@ -4,16 +4,23 @@ metaTitle:  Sidechains FAQ
 ---
 
 This page answers some frequent questions for the Cardano Sidechains Toolkit and the example EVM sidechain application.
-## The Cardano Sidechains Toolkit
-These questions relate to the components IOG provides for building custom sidechains on Cardano.
-### Is the Sidechain Toolkit an open-source project?
-Yes, it will be open-sourced under the Input Output Global Github repository.
 
-### Will there be an alternative chain follower to DB sync that consumes less resources?
+## The Cardano Sidechains Toolkit
+
+These questions relate to the components IOG provides for building custom sidechains on Cardano.
+
+### Is the Sidechain Toolkit an open-source project?
+
+Yes, it will be open-sourced under the Input Output Global GitHub repository.
+
+### Will there be an alternative chain follower to DB Sync that consumes less resources?
+
 Yes, IOG is working in a less resource-intensive tool. There are other chain indexer tools such as [Oura](https://github.com/txpipe/oura) and [Carp](https://github.com/dcSpark/carp) that could serve the purpose of building a Cardano sidechain.
 
 ## The example EVM sidechain application
+
 These questions relate to the application that IOG built as a proof of concept, using the Cardano Sidechains Toolkit.
+
 ### What is the difference between the EVM sidechain design and Milkomeda?
 
 Enhanced security. Milkomeda wants to go mainnet with 32 validators. The EVM sidechain wants to go with 101.
