Capitalization edits as per IO style guide

--- a/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
@@ -158,11 +158,11 @@ These are the field names commonly used in block explorers on the example EVM si
     <strong>Transaction</strong>
   </dt>
   <dd>
-    The block explorer will show a transfer of currency as a Transaction.
+    The block explorer will show a transfer of currency as a transaction.
     <p>
     The formal definition is 
-        <i> 'A piece of data, signed by an External Actor. It represents either a
-        Message or a new Autonomous Object. Transactions are recorded into each
+        <i> 'A piece of data, signed by an *external actor*. It represents either a
+        *message* or a new *autonomous object*. Transactions are recorded into each
         block of the blockchain.' </i>
       (From the Yellow Paper.)
       </p>
