minor edits and brackets styling

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/02-fuel-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/02-fuel-token.mdx
@@ -5,16 +5,12 @@ metaTitle: FUEL token and faucet
 
 ## What is FUEL?
 
-**FUEL<sup>1</sup>** is the native token of Cardano sidechains launched through a Cardano EVM sidechain client. FUEL can be moved between the main chain [Cardano] and the example EVM sidechain, and FUEL is required to pay for gas.
+**FUEL<sup>1</sup>** is the native token of Cardano sidechains launched through a Cardano EVM sidechain client. FUEL can be moved between the main chain (Cardano) and the example EVM sidechain, and FUEL is required to pay for gas.
 
 ## What is test FUEL and how can I claim it via a faucet?
 
-**Test FUEL**, or "Testnet" FUEL, is the native token of the example EVM sidechain testnet, Atago. Test FUEL carries no real-world value.  
-IO Global maintains a faucet at http://faucet.mamba.atago for testing purposes.  
-The faucet dispenses test FUEL that you can use to pay the gas fees on smart contracts that you run on the Atago testnet.  
-You can claim one test FUEL token every 24 hours. 
-You cannot swap the test FUEL tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
-
+**Test FUEL**, or 'Testnet' FUEL, is the native token of the example EVM sidechain testnet, Atago. Test FUEL carries no real-world value.  
+IO Global maintains a faucet at http://faucet.mamba.atago for testing purposes. The faucet dispenses test FUEL that you can use to pay the gas fees on smart contracts that you run on the Atago testnet. You can claim one test FUEL token every 24 hours. You cannot swap the test FUEL tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
 
 ## What is gas?
 
