--- a/content/08-cardano-sidechains/02-sidechain-toolkit/03-chain-follower.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/03-chain-follower.mdx
@@ -3,7 +3,7 @@ title: Chain follower
 metaTitle: Chain follower
 ---
 
-A chain follower such as DB Sync is a component that observes the transactions on the main chain such as Cardano. The chain follower provides the information for a sidechain such as Mamba to stay consistent with the main chain.
+A chain follower such as DB Sync is a component that observes the transactions on the main chain such as Cardano. The chain follower provides the information for a sidechain to stay consistent with the main chain.
 
 [The DB Sync page](https://docs.cardano.org/cardano-components/cardano-db-sync/about-db-sync) gives detailed information about the functionality and how to set it up.
 
