Change heading on web page to 'Example EVM Sidechain Testnet'

--- a/content/08-cardano-sidechains/03-example-evm-sidechains.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains.mdx
@@ -1,6 +1,6 @@
 ---
-title: Example EVM sidechain
-metaTitle: Example EVM sidechain
+title: Example EVM sidechain testnet
+metaTitle: Example EVM sidechain testnet
 ---
 
 <!-- heading no content -->
