--- a/content/08-cardano-sidechains/02-sidechain-toolkit/00-introduction.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/00-introduction.mdx
@@ -14,7 +14,7 @@ Plutus scripts deployed on the Cardano main chain define the flow of a particula
 
 ## Chain follower
 
-The chain follower is capable of observing the state of main-chain events that govern the sidechain and is able to communicate those events to the sidechain. Version 1 of the toolkit currently uses a Cardano DB-sync instance to accommodate this.
+The chain follower is capable of observing the state of main-chain events that govern the sidechain and is able to communicate those events to the sidechain. Version 1 of the toolkit currently uses a Cardano DB Sync instance to accommodate this.
 
 ## Sidechain specific module
 
