--- a/content/08-cardano-sidechains/03-example-evm-sidechains/06-api.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/06-api.mdx
@@ -3,11 +3,11 @@ title: JSON-RPC API
 metaTitle: JSON-RPC API
 ---
 
-Interacting with the sidechain requires sending requests to specific JSON-RPC API methods. The Cardano EVM sidechain supports most standard Ethereum JSON-RPC API endpoints with a few exceptions described below.
+Interacting with the sidechain requires sending requests to specific JSON-RPC API methods. The Cardano EVM sidechain testnet supports most standard Ethereum JSON-RPC API endpoints with a few exceptions described below.
 
 ## Specification
 
-The Cardano EVM sidechain supports [OpenRPC](https://open-rpc.org/)'s `rpc.discover` service discovery method that will return the OpenRPC scheme for the JSON-RPC API. You can easily validate and preview the schema on the [OpenRPC Playground](https://playground.open-rpc.org/?schemaUrl=http://faucet.mamba.atago/).
+The Cardano EVM sidechain testnet supports [OpenRPC](https://open-rpc.org/)'s `rpc.discover` service discovery method that will return the OpenRPC scheme for the JSON-RPC API. You can easily validate and preview the schema on the [OpenRPC Playground](https://playground.open-rpc.org/?schemaUrl=http://faucet.mamba.atago/).
 
 ## Supported methods
 
