--- a/content/08-cardano-sidechains/03-example-evm-sidechains/07-using-web3-js.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/07-using-web3-js.mdx
@@ -3,9 +3,9 @@ title: Using web3.js
 metaTitle: Using web3.js
 ---
 
-This section helps learning how to use the web3 Javascript interface with the Cardano EVM sidechain client for application development. You can also walk through an example program that demonstrates some sample API calls.  
+This section helps learning how to use the web3 Javascript interface with the Cardano EVM sidechain client for application development on the testnet. You can also walk through an example program that demonstrates some sample API calls.  
   
-The Ethereum web3.js interface provides many documented API calls. The interface gives you full access to a copy of the Cardano EVM Sidechain. You can create a website or client that uses a remote EVM sidechain node to interact with the decentralized blockchain ledger. The web3.js interface is also used to develop smart contracts in the Solidity language.  
+The Ethereum web3.js interface provides many documented API calls. The interface gives you full access to a copy of the Cardano EVM Sidechain testnet. You can create a website or client that uses a remote EVM sidechain node to interact with the decentralized blockchain ledger. The web3.js interface is also used to develop smart contracts in the Solidity language.  
   
 This example will set up a simple Javascript program to demonstrate the concept. See the end of this page for more information. 
 
