--- a/content/08-cardano-sidechains/03-example-evm-sidechains/00-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/00-network-details.mdx
@@ -3,7 +3,7 @@ title: Network details
 metaTitle: Network details
 ---
 
-This page provides basic reference to Cardano EVM sidechain networks including RPC, chain ID, and public utilities. The Cardano EVM sidechain testnet, Atago, replicates the Cardano EVM sidechain mainnet and is intended for testing purposes. Building on the testnet allows developers to deploy and test applications without risking real assets and value.
+This page provides basic reference to Cardano EVM sidechain networks including RPC, chain ID, and public utilities. The Cardano EVM sidechain testnet, Atago, is intended for testing purposes. Building on the testnet allows developers to deploy and test applications without risking real assets and value.
 
 ## Networks
 
