--- a/content/09-plutus/04-dapp-development.mdx
+++ b/content/09-plutus/04-dapp-development.mdx
@@ -63,7 +63,7 @@ The complete [Plutus tools user guide](https://plutus-apps.readthedocs.io/en/lat
 
 - [How to get started with the Plutus Platform](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/getting-started.html)
 - [How to write a scalable Plutus app](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/writing-a-scalable-app.html)
-- [How to handle blockcTensorFlhain events](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/handling-blockchain-events.html)
+- [How to handle blockchain events](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/handling-blockchain-events.html)
 - [How to analyze the cost and size of Plutus scripts](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/analysing-scripts.html)
 - [Plutus scripts](https://docs.cardano.org/plutus/plutus-scripts)
 - [Troubleshooting](https://plutus-apps.readthedocs.io/en/latest/plutus/troubleshooting.html)
