adding https://cexplorer.io/ to the list

--- a/content/02-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/content/02-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -45,6 +45,7 @@ Here is a list of other explorers to consider:
 - [AdaStat](https://adastat.net/transactions)
 - [Adatools](https://adatools.io/transactions)
 - [Cardanoscan](https://cardanoscan.io/transactions)
+- [Cexplorer](https://cexplorer.io/)
 
 ### Exploring assets
 
