--- a/content/08-native-tokens/01-learn.mdx
+++ b/content/08-native-tokens/01-learn.mdx
@@ -11,6 +11,8 @@ The native tokens feature extends the existing accounting infrastructure defined
 
 Read more about [native tokens and how they compare to ada and ERC20](https://github.com/input-output-hk/cardano-ledger-specs/blob/master/doc/explanations/features.rst) and watch our [native tokens explainer video](https://www.youtube.com/watch?v=PVqsCXh-V5Y). 
 
+Browse native tokens created on the Cardano blockchain and see their transactions in an interactive dashboard that allows filtering and searching: [Native Tokens Dashboard](https://nativetokens.da.iog.solutions/).
+
 ### Single asset ledgers
 
 Cryptocurrency ledgers that track exactly one type of asset are called single-asset ledgers.
