--- a/content/09-plutus/04-dapp-development.mdx
+++ b/content/09-plutus/04-dapp-development.mdx
@@ -83,6 +83,7 @@ Are you a developer building on Cardano with Plutus? Have you produced tutorials
 -   [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
 -   [Demeter Run](https://demeter.run/): a cloud environment with all the tools for building a DApp on Cardano
 -   [Mesh](https://mesh.martify.io/): an open-source library for building Web3 applications on Cardano with ease.
+-   [plutus-cborhex-automatiom](https://github.com/SIDANWhatever/plutus-cborhex-automation): an open-source library to build RESTful API for paramerterized plutus script
 
 **Tutorials**
 
