fix: ETCM-2959 add sla enviorment in support page

--- a/content/08-cardano-sidechains/04-support/00-getting-support.mdx
+++ b/content/08-cardano-sidechains/04-support/00-getting-support.mdx
@@ -2,6 +2,7 @@
 title: Getting support
 metaTitle:  Getting support
 ---
+
 Your feedback is important because it helps us improve Cardano.
 
 ## Discord
@@ -26,6 +27,6 @@ When you develop for the Ethereum virtual machine (EVM), you write in the same S
 
 For example, you can ask questions on the [Stack Overflow website](https://stackoverflow.com/) and use the tag 'solidity'. You can also search for similar questions by typing `[solidity]` into the search box on the website. The result page of this search will give you the opportunity to watch the tag.
 
-## Cardano website  
+## IOG Technical Support
 
-To contact IOG Technical Support, please submit a request using the [Submit a request form](https://iohk.zendesk.com/hc/en-us/requests/new). On that page, you can also click the Support button at the bottom right of your screen. Look for the category 'Cardano EVM sidechain' on the product list and 'Cardano EVM sidechain' on the product version. The request form is better if you have a lot to write.
+To contact IOG technical support, please head to our [Support Page](https://iohk.zendesk.com/hc/en-us/requests/new). From there you will be able to submit a support request using the on-page form provided. Please make sure to select "**Cardano EVM Sidechain**" for both the '**Product**' and '**Product Version**' when submitting your request.  Alternatively, this form is also accessible through the support button on the bottom right hand side of the screen ( Once the support module opens, click 'contact us' to access the form ). We recommend using the on-page form if you have a lengthy request. We are committed to providing the best possible service to our users. **You will receive a response from a team member within 24 hours during weekdays (Monday - Friday) and during the weekend on a best endeavor basis.** Please note that our support is based on commercially reasonable as we do our best to resolve any issues you may be experiencing. We appreciate your understanding and look forward to assisting you.
