--- a/content/09-plutus/04-dapp-development.mdx
+++ b/content/09-plutus/04-dapp-development.mdx
@@ -7,15 +7,15 @@ This section provides a high-level overview of what a decentralized application 
 
 ## What is a DApp?
 
-A DApp is a decentralized application that interacts with the blockchain. Just like a mobile application can run on your desktop or mobile device, so does a Cardano DApp. The difference between a DApp and a common application is that a DApp’s backend code runs on a decentralized peer-to-peer network whereas the application’s backend code is commonly run on a centralized server. 
+A DApp is a decentralized application that interacts with the blockchain. The difference between a DApp and a common application is that a DApp’s backend code runs on a decentralized peer-to-peer network whereas the application’s backend code is commonly run on a centralized server. 
 
-DApp categories can include DeFi products (e.g. lending protocols, exchanges, etc), NFT marketplaces, gaming applications, healthcare products, the wallets often used to connect with all of these, and many more besides.
+DApp categories can include DeFi products (eg, lending protocols, exchanges, etc), NFT marketplaces, gaming applications, healthcare products, and wallets (often used to connect with all of these) among others.
 
 ## Plutus DApp development
 
 DApps are built on open-source tooling. For a DApp to function, it needs to have an underlying [smart contract](https://docs.cardano.org/new-to-cardano/what-is-a-smart-contract) that automatically executes the deal for users. All the operational records are then tracked on the blockchain ledger. In general, a DApp usually consists of a user-friendly front end, a (commonly cloud-based) backend with an operating smart contract, and is also connected to a blockchain ledger to track records on-chain. DApp benefits include trustless communication, resistance to censorship, privacy, and minimal downtime.
 
-A smart contract (which may consist of different scripts) is the driving force behind a DApp's functionality. Plutus scripts are written in Haskell (using the Plutus library and tools) and are then compiled to Plutus Core to be executed on the Cardano blockchain. The diagram below outlines the process of DApp development from code to on-chain deployment:
+A smart contract (which consists of different scripts) is the driving force behind a DApp's functionality. Plutus scripts are written in Haskell (using the Plutus library and tools) and are then compiled to Plutus Core to be executed on the Cardano blockchain. The diagram below outlines the process of DApp development from code to on-chain deployment:
 
 ![plutus-architecture](https://ucarecdn.com/09beeb4d-ca98-4460-8d2f-b639a69cf156/)
 
