--- a/content/08-cardano-sidechains/04-support/00-getting-support.mdx
+++ b/content/08-cardano-sidechains/04-support/00-getting-support.mdx
@@ -7,7 +7,7 @@ Your feedback is important because it helps us improve Cardano.
 
 ## Discord
 
-If you have any questions or want to collaborate with fellow sidechain builders, then join `#ask-sidechains` in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput) server.
+If you have any questions or want to collaborate with fellow sidechain developers, join the `#ask-sidechains` channel in [IO Technical Communities Discord](https://discord.com/invite/inputoutput).
 
 ## Cardano Forum  
 
@@ -27,6 +27,6 @@ When you develop for the Ethereum virtual machine (EVM), you write in the same S
 
 For example, you can ask questions on the [Stack Overflow website](https://stackoverflow.com/) and use the tag 'solidity'. You can also search for similar questions by typing `[solidity]` into the search box on the website. The result page of this search will give you the opportunity to watch the tag.
 
-## IOG Technical Support
+## IOG technical support
 
-To contact IOG technical support, please head to our [Support Page](https://iohk.zendesk.com/hc/en-us/requests/new). From there you will be able to submit a support request using the on-page form provided. Please make sure to select "**Cardano EVM Sidechain**" for both the '**Product**' and '**Product Version**' when submitting your request.  Alternatively, this form is also accessible through the support button on the bottom right hand side of the screen ( Once the support module opens, click 'contact us' to access the form ). We recommend using the on-page form if you have a lengthy request. We are committed to providing the best possible service to our users. **You will receive a response from a team member within 24 hours during weekdays (Monday - Friday) and during the weekend on a best endeavor basis.** Please note that our support is based on commercially reasonable as we do our best to resolve any issues you may be experiencing. We appreciate your understanding and look forward to assisting you.
+To contact IOG technical support, please see this [support page](https://iohk.zendesk.com/hc/en-us/requests/new), where you can submit a support request using the form provided. Please make sure to select '**Cardano EVM Sidechain**' for both the '**Product**' and '**Product Version**'.  Alternatively, this form is also accessible through the support button on the bottom right hand side of the screen (once the support module opens, click 'contact us' to access the form). We recommend using the on-page form if you have a lengthy request. We are committed to providing the best possible service to our users. **You will receive a response from a team member within 24 hours during weekdays (Monday - Friday) and during the weekend on a best endeavor basis.** Please note that this support is based on a commercially reasonable basis as the teams do their best to resolve any issues a user may be experiencing. We appreciate your understanding and look forward to assisting you.
