fix: minor support page changes

--- a/content/08-cardano-sidechains/04-support/00-getting-support.mdx
+++ b/content/08-cardano-sidechains/04-support/00-getting-support.mdx
@@ -29,4 +29,4 @@ For example, you can ask questions on the [Stack Overflow website](https://stack
 
 ## IOG technical support
 
-To contact IOG technical support, please see this [support page](https://iohk.zendesk.com/hc/en-us/requests/new), where you can submit a support request using the form provided. Please make sure to select '**Cardano EVM Sidechain**' for both the '**Product**' and '**Product Version**'.  Alternatively, this form is also accessible through the support button on the bottom right hand side of the screen (once the support module opens, click 'contact us' to access the form). We recommend using the on-page form if you have a lengthy request. We are committed to providing the best possible service to our users. **You will receive a response from a team member within 24 hours during weekdays (Monday - Friday) and during the weekend on a best endeavor basis.** Please note that this support is based on a commercially reasonable basis as the teams do their best to resolve any issues a user may be experiencing. We appreciate your understanding and look forward to assisting you.
+To contact IOG technical support, please see this [support page](https://iohk.zendesk.com/hc/en-us/requests/new), where you can submit a support request using the form provided. Please make sure to select '**Cardano EVM Sidechain**' for both the '**Product**' and '**Product Version**'.  Alternatively, this form is also accessible through the support button on the bottom right hand side of the screen (once the support module opens, click 'contact us' to access the form). We recommend using the on-page form if you have a lengthy request. We are committed to providing the best possible service to our users. **You will receive a response from a team member within 24 hours during weekdays (Monday - Friday) and during the weekend on a commercially reasonable endeavor basis.** Please note that this support is based on a commercially reasonable basis as the teams do their best to resolve any issues a user may be experiencing. We appreciate your understanding and look forward to assisting you.
