fix: update transfer token page

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/05-transferring-tokens.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/05-transferring-tokens.mdx
@@ -30,7 +30,7 @@ The following `sidechain-cli` command will burn Takao test `ADA` for Atago test 
 
 The transaction will be stable on the mainchain in approximately 12 minutes or 36 blocks. The sidechain will then add it to a produced block and the tokens should appear in the account balance:
 
-- Check account balance on Atago using the [JSON-RPC API](/cardano-sidechains/example-evm-sidechains/api): 
+- Check FUEL token balance on Atago using the [JSON-RPC API](/cardano-sidechains/example-evm-sidechains/api): 
 
 ```shell
 curl -L -X POST http://faucet.mamba.atago -H 'Content-type:application/json' -d '{
